--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
     <title>Car Website</title>
 </head>
 <body>
+
+    <img class="monkeys" src="img/carlogo.png" alt="">
     
+    <div class="right">
+        <li class="nav-item">
+            <a href="">Home</a>
+        </li>
+
+        <li>
+            <a href="">Our Cars</a>
+        </li>
+
+        <li>
+            <a href="">Reviews</a>
+        </li>
+
+        <li>
+            <a href="">About</a>
+        </li>
+
+        <li>
+            <a href="">Pages</a>
+        </li>
+
+        <li>
+             <a href="">Contact Us</a>
+        </li>
+    </div>
 </body>
 </html>
