added other stuff

--- a/index.html
+++ b/index.html
@@ -1,39 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <title>Car Website</title>
 </head>
+
 <body>
+    <div class="header">
+        <img class="monkeys" src="img/carlogo.png" alt="" width="100px" height="80px"> 
 
-    <img class="monkeys" src="img/carlogo.png" alt="">
-    
-    <div class="right">
-        <li class="nav-item">
-            <a href="">Home</a>
-        </li>
+        <ul class="right">
+            <li class="nav-item">
+                <a href="">Home</a>
+            </li>
 
-        <li>
-            <a href="">Our Cars</a>
-        </li>
+            <li class="nav-item">
+                <a href="">Our Cars</a>
+            </li>
 
-        <li>
-            <a href="">Reviews</a>
-        </li>
+            <li class="nav-item">
+                <a href="">Reviews</a>
+            </li>
 
-        <li>
-            <a href="">About</a>
-        </li>
+            <li class="nav-item">
+                <a href="">About</a>
+            </li>
 
-        <li>
-            <a href="">Pages</a>
-        </li>
+            <li class="nav-item">
+                <a href="">Pages</a>
+            </li>
 
-        <li>
-             <a href="">Contact Us</a>
-        </li>
+            <li class="nav-item">
+                <a href="">Contact Us</a>
+            </li>
+        </ul>
+        <div class="far-right">
+            <img class="img" src="img/magnifying-glass-16.png" alt="">
+            <img class="img" src="img/cart.png" alt="">
+            <img class="img" src="img/person-icon_109161-4674.jpg" alt="">
+            <img class="img" src="img/more.svg" alt="">
+        </div>
     </div>
+    <img class="Car" src="img/bigcar.jpeg" alt="">
 </body>
+
 </html>
