--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="">Contact Us</a>
             </li>
         </ul>
-        <div class="far-right">
+        <div  class="icons">
             <img class="img" src="img/magnifying-glass-16.png" alt="">
             <img class="img" src="img/cart.png" alt="">
             <img class="img" src="img/person-icon_109161-4674.jpg" alt="">
