added loads of stuff

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="header">
-        <img class="monkeys" src="img/carlogo.png" alt="" width="100px" height="80px"> 
+        <img class="monkeys" src="img/carlogo.png" alt="" width="100px" height="80px">
 
         <ul class="right">
             <li class="nav-item">
@@ -37,14 +37,66 @@
                 <a href="">Contact Us</a>
             </li>
         </ul>
-        <div  class="icons">
+        <div class="icons">
             <img class="img" src="img/magnifying-glass-16.png" alt="">
             <img class="img" src="img/cart.png" alt="">
             <img class="img" src="img/person-icon_109161-4674.jpg" alt="">
             <img class="img" src="img/more.svg" alt="">
         </div>
     </div>
-    <img class="Car" src="img/bigcar.jpeg" alt="">
+
+    <section class="third-hero-section">
+        <div class="image-text">
+            <div main-section-text>
+                <h1>LAMBORGHINI</h1>
+                <H1>AVENTADOR LP700-4</H1>
+                <p>6.6LV832VDDIOHV lurbodiesel,5 speed automatic,fuel type:Diesel,color:Black</p>
+                <button>BOOK NOW</button>
+            </div>
+        </div>
+    </section>
+
+    <div class="second-side">
+        <h1>-Featured Vehicles-</h1>
+        <p>mauris cursus quis lorem sed cursus.Aenean aliquam pellentesque magna, ut dictum ex pellentesque magna, ut dictum ex pellentesque</p>
+
+         <div></div>
+            <div class="rat">
+                <h2>Sort by:</h2>
+                <select name="cars" id="cars">
+                    <option value="volvo">All</option>
+                    <option value="saab">Sedan</option>
+                    <option value="mercedes">Sports</option>
+                    <option value="audi">Luxury</option>
+                </select>
+        <div class="second-images">
+            <div class="second-image">
+                <img src="img/car 3.jpeg" alt="">
+                <h3>2018 FORD MUSTANG</h3>
+                <p>6.6LV832VDDIOHV lurbodiesel,5 speed automatic,fuel type:Diesel,color:Black</p>
+                <h2>$65,000</h2>
+                <button>VIEW DETAILS</button>
+            </div>
+
+            <div class="second-image">
+                <img src="img/car 2.jpeg" alt="">
+                <h3>2018 FORD MUSTANG</h3>
+                <p>6.6LV832VDDIOHV lurbodiesel,5 speed automatic,fuel type:Diesel,color:Black</p>
+                <h2>$65,000</h2>
+                <button>VIEW DETAILS</button>
+            </div>
+
+            <div class="second-image">
+                <img src="img/car 3.jpeg" alt="">
+                <h3>2018 FORD MUSTANG</h3>
+                <p>6.6LV832VDDIOHV lurbodiesel,5 speed automatic,fuel type:Diesel,color:Black</p>
+                <h2>$65,000</h2>
+                <button>VIEW DETAILS</button>
+            </div>
+    </div>
+
+    
+
 </body>
 
 </html>
